--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -1,10 +1,17 @@
 <!DOCTYPE>
 <html>
-<head>
-<title>Cheat Sheet</title>
-<meta charset="UTF-8">
-</head>
-<body>
+  <head>
+    <title>Cheat Sheet</title>
+    <meta charset="UTF-8">
+  </head>
+  <body>
+<h1>Array 遍历</h1>
+<p>Array.prototype.map(callback(value,index,array))</p>
+<p>callback function allows return</p>
+<hr/>
+<p></p>Array.prototype.forEach(callback(value,index,array))></p>
+<p>callback function don't have return</p>
+<hr/>
 <p></p>
 <p></p>
 <p></p>
@@ -12,5 +19,10 @@
 <p></p>
 <p></p>
 <p></p>
-</body>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+  </body>
 </html>
