--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -9,15 +9,16 @@
 <p>Array.prototype.map(callback(value,index,array))</p>
 <p>callback function allows return</p>
 <hr/>
-<p></p>Array.prototype.forEach(callback(value,index,array))></p>
+<p>Array.prototype.forEach(callback(value,index,array))></p>
 <p>callback function don't have return</p>
 <hr/>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
+<p>Array.prototype.some(callback(value,index,array))</p>
+<p>至少有一个callback返回真时some()返回真,否则some()返回假</p>
+<p>用来检测有没有符合要求的元素</p>
+<hr/>
+<p>Array.prototype.every(callback(value,index,array))</p>
+<p>全部callback返回真时every()返回真,否则every()返回假</p>
+<p>用来检查数组符不符合要求</p>
 <p></p>
 <p></p>
 <p></p>
